--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordoba-plugin-adfurikun" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0"
+<plugin id="cordova-plugin-adfurikun" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>adfurikun</name>
     <description>Adfurikun Plugin</description>
@@ -24,6 +24,13 @@
                 android:authorities="${applicationId}.TTMultiProvider" android:exported="false" />
         </config-file>
 
+        <!-- <config-file parent="/*" target="AndroidManifest.xml"></config-file> -->
+
+
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <activity android:label="New Activity" android:name="com.example.sample.plugin.NewActivity"></activity>
+        </config-file>
+
         <lib-file src="src/android/libs/adfurikunMovieRewardSDK-3.7.1.aar" />
         <lib-file src="src/android/libs/adfurikunsdk-adnw-maven.gradle" />
         <lib-file src="src/android/libs/adfurikunsdk-support-androidx.gradle" />
@@ -33,8 +40,17 @@
         <lib-file src="src/android/libs/pangle-sdk-china-3.2.5.1.aar" />
 
         <source-file src="src/android/Adfurikun.java" target-dir="src/com/yusukesakurai/cordova/adfurikun" />
+        <source-file src="src/android/NewActivity.java" target-dir="src/com/yusukesakurai/cordova/adfurikun" />
+        <source-file src="src/android/activity_new.xml" target-dir="res/layout"/>
+
 
         <framework src="src/android/build.gradle" custom="true" type="gradleReference" />
 
     </platform>
 </plugin>
+
+
+
+
+
+
